--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,13 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(216, 216, 216);
-  border-radius: 40px;
+  background-color: #2E2328;
+  border-radius: 1px;
+  padding-right: 5px;
+  cursor: pointer;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
