--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #2E2328;
+  background-color: #8d898a;
   border-radius: 1px;
   padding-right: 5px;
   cursor: pointer;
