--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,11 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #8d898a;
-  border-radius: 1px;
+  background-color: #c1c0c0;
+  border-radius: 5px;
   padding-right: 5px;
   cursor: pointer;
 }
